Add comnados router
Add pagina com os comandos dos roteadores.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
 </head>
 
 <body>
-
     <!-- nav | Menu Superior - Seleciona função a ser utilizada -->
     <nav class="tabs is-centered remove-margin-bottom">
         <ul>
@@ -22,7 +21,7 @@
             <li id="tab_abertura">
                 <a onclick="abertura()">
                     <span class="icon is-small">
-												<i class="fas fa-hammer" aria-hidden="true"></i></span>
+						<i class="fas fa-hammer" aria-hidden="true"></i></span>
                     <span>Abertura</span>
                 </a>
             </li>
@@ -31,7 +30,7 @@
             <li id="tab_encerramento">
                 <a onclick="encerramento()">
                     <span class="icon is-small">
-												<i class="fas fa-band-aid" data-fa-transform="rotate-135" aria-hidden="true"></i></span>
+						<i class="fas fa-band-aid" data-fa-transform="rotate-135" aria-hidden="true"></i></span>
                     <span>Encerramento</span>
                 </a>
             </li>
@@ -40,7 +39,7 @@
             <li id="tab_email">
                 <a onclick="email()">
                     <span class="icon is-small">
-												<i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+						<i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
                     <span>E-mail</span>
                 </a>
             </li>
@@ -49,12 +48,22 @@
             <li id="tab_editor">
                 <a onclick="editor()">
                     <span class="icon is-small">
-												<i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+						<i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
                     <span>Editor de Texo</span>
                 </a>
             </li>
 
+            <!-- Comandos de Roteadores -->
+            <li class="has-background-primary">
+                <a href="router.html" target="_blank" class="my-router">
+                    <span class="icon is-small has-text-white">
+                        <i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+                    <span class="has-text-white">Comandos de Routers</span>
+                </a>
+            </li>
+
         </ul>
+
     </nav>
     <!-- /nav | Menu Superior -->
 
@@ -932,7 +941,7 @@
                                 <div class="content">
 
                                     <div class="field">
-                                        <a href="https://gabbamendonca.github.io/apps-oi/encerramento">
+                                        <a href="https://gabbamendonca.github.io/apps-oi/encerramento" target="_blank">
                                             <button class="button is-small is-link is-fullwidth">Códigos de Encerramento R2</button>
                                         </a>
                                     </div>
