Corrigibndo texto do posicionamento

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <li id="tab_editor">
                 <a onclick="editor()">
                     <span class="icon is-small">
-						<i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+						<i class="fas fa-paragraph" aria-hidden="true"></i></span>
                     <span>Editor de Texo</span>
                 </a>
             </li>
@@ -57,7 +57,7 @@
             <li id="tab_posicionamento">
                 <a onclick="posicionamento()">
                     <span class="icon is-small">
-                                                            <i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+                        <i class="fas fa-map-marker-alt" aria-hidden="true"></i></span>
                     <span>Posicionamento</span>
                 </a>
             </li>
@@ -66,7 +66,7 @@
             <li class="has-background-primary">
                 <a href="router.html" target="_blank" class="my-router">
                     <span class="icon is-small has-text-white">
-                        <i class="fas fa-envelope-open-text" aria-hidden="true"></i></span>
+                        <i class="fas fa-terminal" aria-hidden="true"></i></span>
                     <span class="has-text-white">Comandos de Routers</span>
                 </a>
             </li>
@@ -1170,7 +1170,7 @@
                         <div class="field is-horizontal">
 
                             <div class="field-label is-small">
-                                <label class="label is-small">Posto : </label>
+                                <label class="label is-small">Posto* : </label>
                             </div>
                             <div class="field-body">
                                 <div class="field">
@@ -1248,7 +1248,7 @@
                         <!-- campo Descrição -->
                         <div class="field is-horizontal">
                             <div class="field-label is-small">
-                                <label class="label is-small">Descrição : </label>
+                                <label class="label is-small">Descrição* : </label>
                             </div>
                             <div class="field-body">
                                 <div class="field">
@@ -1280,27 +1280,15 @@
                         <div class="field is-horizontal">
 
                             <div class="field-label is-small">
-                                <label class="label is-small">Previsão : </label>
+                                <label class="label is-small">Previsão/Prox. Status* : </label>
                             </div>
                             <div class="field-body">
                                 <div class="field">
                                     <div class="control is-expanded has-icons-left has-icons-right">
                                         <input id="poPrevisao" class="input is-small" type="text" placeholder="">
-                                        <!-- <span class="icon is-small is-left"><i class="fas fa-headset"></i></span> -->
+                                        <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>
                                     </div>
                                 </div>
-
-                                <div class="field-label is-small">
-                                    <label class="label is-small">Prox. Status :</label>
-                                </div>
-
-                                <div class="field">
-                                    <div class="control is-expanded has-icons-left has-icons-right">
-                                        <input id="poProxStatus" class="input is-small" type="text" placeholder="">
-                                        <!-- <span class="icon is-small is-left"><i class="fas fa-headset"></i></span>s -->
-                                    </div>
-                                </div>
-
                             </div>
 
                         </div>
