Refatorado mascara de encerramento.
Modificado texto da mascara de encerramento.
Removido a linha 'falha fim' do texto.
Modificado a posição da senha do texto.
Refatorado trecho do codigo que era uma função para classe.

--- a/index.html
+++ b/index.html
@@ -671,7 +671,7 @@
                                     <div class="field">
                                         <label class="radio"><input type="radio" name="radioValidacao" value="0" checked> CPD </label>
                                         <label class="radio"><input type="radio" name="radioValidacao" value="1"> Residente </label>
-                                        <label class="radio"><input type="radio" name="radioValidacao" value="2"> CGS </label>
+                                        <label class="radio"><input type="radio" name="radioValidacao" value="2"> CEC </label>
                                     </div>
                                     <!-- /Radio buttons -->
                                 </div>
