Add botão comutado na rota

--- a/index.html
+++ b/index.html
@@ -703,6 +703,9 @@
                                         <div class="field">
                                             <button class="button is-small is-fullwidth gap-button my-info is-info is-outlined" onclick="buttonRedeaManobra()">Redea - Manobra</button>
                                         </div>
+                                        <div class="field">
+                                            <button class="button is-small is-fullwidth gap-button my-info is-info is-outlined" onclick="buttonComutadoNaRota()">Comutado na Rota</button>
+                                        </div>
                                     </div>
                                     <!-- /Buttons - Causa Operadora -->
                                     <!-- Buttons - Voz -->
