Add buton abertura no emial

--- a/index.html
+++ b/index.html
@@ -1056,6 +1056,11 @@
 										onclick="buttonEmailPosicionamento()">Posicionamento</button>
 								</div>
 
+								<div class="field">
+									<button class="button is-small is-fullwidth gap-button my-info is-info is-outlined"
+										onclick="buttonEmailAbertura()">Abertura</button>
+								</div>
+
 							</div>
 						</div>
 
